--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
-body {
-    background-color: #000;
+
+html {
+    height: 100%;
+    background: radial-gradient(ellipse at bottom, #ff0202 0%, #000000 100%);
+    overflow: hidden;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+}
+.header h1 {
+  color: #FFF;
+  text-align: center;
+  font-weight: 300;
+  font-size: 50px;
+  letter-spacing: 10px;
+}
+.header img {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: -50px;
 }
