--- a/style.css
+++ b/style.css
@@ -1,23 +1,33 @@
-
 html {
     height: 100%;
     background: radial-gradient(ellipse at bottom, #ff0202 0%, #000000 100%);
     overflow: hidden;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
 }
+
 .header h1 {
-  color: #FFF;
-  text-align: center;
-  font-weight: 300;
-  font-size: 50px;
-  letter-spacing: 10px;
+    color: #FFF;
+    text-align: center;
+    font-weight: 300;
+    font-size: 50px;
+    letter-spacing: 10px;
 }
+
 .header img {
-    display:block;
+    display: block;
     margin-left: auto;
     margin-right: auto;
     position: relative;
